// SPDX-FileCopyrightText: Â© 2020-2024 The Jujutsu Authors
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package git_store;

message Commit {
  repeated bytes predecessors = 2;
  bytes change_id = 4;

  // Alternating positive and negative terms. Set only for conflicts.
  // Resolved trees are stored in the git commit
  repeated bytes root_tree = 1;
  // TODO(#1624): delete when we assume that all commits use this format
  bool uses_tree_conflict_format = 10;

  bool is_open = 8 [deprecated = true];
  bool is_pruned = 9 [deprecated = true];
}
